<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/meetingItemCountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/geometria_medium"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:text="Мероприятие 1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/meetingItemTopContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/meetingItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/geometria_regular"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/meetingItemEditBtn"
            app:layout_constraintEnd_toStartOf="@id/meetingItemEditBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/meetingItemEditBtn"
            tools:text="Прогулка в парке " />

        <ImageView
            android:id="@+id/meetingItemDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/meetingItemEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            app:layout_constraintEnd_toStartOf="@id/meetingItemDeleteBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_edit" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/meetingItemDeleteBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/meetingItemCollapseContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/meetingItemTypeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:alpha="0.3"
                android:fontFamily="@font/geometria_regular"
                android:text="@string/meeting_item_select_txt"
                android:textColor="@color/textColorGray"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_stroke_terracote_30">

                <Spinner
                    android:id="@+id/meetingItemTypeSelector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/meetingItemNameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meetingItemTypeContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:alpha="0.3"
                android:fontFamily="@font/geometria_regular"
                android:text="@string/meeting_item_select_name_txt"
                android:textColor="@color/textColorGray"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_stroke_terracote_30">

                <AutoCompleteTextView
                    android:id="@+id/meetingItemNameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:background="@null"
                    android:fontFamily="@font/geometria_regular"
                    android:hint="@string/meeting_item_select_name_hint" />

            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/meetingItemAddBtn"
            style="@style/ButtonDesertLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meetingItemNameContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>